--- a/css/style.css
+++ b/css/style.css
@@ -955,7 +955,8 @@ header .btn {
     margin: 20px;
     position: relative;
     overflow: hidden;
-    min-height: 412px;
+    min-height: 420px;
+    width: 326px;
 }
 
 .games-item__logo {
@@ -966,7 +967,8 @@ header .btn {
     height: 33px;
 }
 
-.games-item__logo path {
+.games-item__logo path,
+.games-item__logo polygon {
     fill: var(--brand-white);
 }
 
@@ -974,7 +976,7 @@ header .btn {
     color: var(--brand-white);
     font-weight: 700;
     font-size: 22px;
-    line-height: 1;
+    line-height: 1.1;
     margin-top: 18px;
     z-index: 1;
     position: relative;
@@ -985,7 +987,7 @@ header .btn {
     font-weight: 800;
     font-size: 36px;
     line-height: 1.1;
-    margin-top: 48px;
+    margin-top: 55px;
     margin-bottom: 32px;
     z-index: 1;
     position: relative;
@@ -1006,10 +1008,10 @@ header .btn {
 .games-item__skewed-shape {
     position: absolute;
     background-color: #ba1521;
-    width: 250px;
-    height: 540px;
+    width: 270px;
+    height: 550px;
     top: 0;
-    right: -72px;
+    right: -92px;
     transform: rotate(38deg);
     z-index: 0;
 }
@@ -1030,7 +1032,7 @@ header .btn {
     font-size: 80px;
     text-align: center;
     margin-bottom: 18px;
-    margin-top: 30px;
+    margin-top: 31px;
     font-family: var(--font-barlow);
 }
 
@@ -1043,6 +1045,135 @@ header .btn {
 .games-item--loto-plus .games-item__skewed-shape {
     background-color: #003290;
 }
+
+.games-item--loto-plus .games-item__graphic {
+    right: -62px;
+    top: 25px;
+    transform: rotate(3deg) scale(1.2);
+}
+
+.games-item--bingo {
+    background: var(--brand-purple);
+}
+
+.games-item--bingo .games-item__skewed-shape {
+    background-color: #822eb7;
+}
+
+.games-item--bingo .games-item__text-small {
+    font-size: 26px;
+}
+
+.games-item__text-big--bingo {
+    display: flex;
+    align-items: flex-end;
+    margin-bottom: 18px;
+    margin-top: 10px;
+}
+
+.games-item__text-big--bingo span {
+    font-family: var(--font-barlow);
+}
+
+.games-item__text-big--bingo>span:first-child {
+    font-size: 174px;
+    line-height: 0.8;
+    margin-right: 6px;
+    position: relative;
+    z-index: 0;
+}
+
+.games-item__text-big--bingo>span:last-child {
+    font-size: 60px;
+    line-height: 0.8;
+}
+
+.games-item__text-big--bingo>span:last-child span {
+    font-size: 26px;
+    display: block;
+}
+
+.games-item--bingo .games-item__graphic {
+    right: -102px;
+    top: 25px;
+    height: 260px;
+}
+
+.games-item--joker {
+    background: var(--brand-green);
+}
+
+.games-item--joker .games-item__skewed-shape {
+    background-color: #006400;
+}
+
+.games-item__logo--joker {
+    height: 28px;
+    margin-bottom: 2px;
+}
+
+.games-item__text-small-2 {
+    color: var(--brand-white);
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.1;
+    margin-top: 53px;
+    z-index: 1;
+    position: relative;
+}
+
+.games-item--joker .games-item__text-big {
+    margin-top: -10px;
+}
+
+.games-item--joker .games-item__graphic {
+    transform: none;
+    height: 200px;
+    top: 40px;
+    right: -40px;
+}
+
+.games-item--esrecke {
+    background: var(--brand-light-blue-2);
+}
+
+.games-item--esrecke .games-item__skewed-shape {
+    background-color: #429e9f;
+}
+
+.games-item__logo--esrecke {
+    height: 72px;
+    margin-top: -22px;
+}
+
+.games-item--esrecke .games-item__text-big {
+    margin-top: 88px;
+    font-family: var(--font-barlow);
+    font-size: 78px;
+    text-align: left;
+}
+
+.games-item--esrecke .games-item__text-big span {
+    display: block;
+    font-family: var(--font-barlow);
+    font-size: 54px;
+}
+
+.games-item--esrecke .games-item__graphic {
+    height: 210px;
+    transform: none;
+    top: 40px;
+    right: -20px;
+}
+
+.games-btns button {
+    position: relative;
+}
+
+.games-btns button:before {
+    color: var(--brand-dark-gray);
+}
+
 
 
 
