--- a/css/style-1.css
+++ b/css/style-1.css
@@ -7,7 +7,7 @@ p {
     margin-bottom: .5rem;
 }
 
-/* #MAIN BANNER */
+/* MAIN BANNER >> */
 .main-banner {
     padding: 20px 0 50px;
 }
@@ -63,8 +63,9 @@ p {
 	font-weight: 700;
 	transform: translate(-10px, 8px);
 }
-/* end#MAIN BANNER */
+/* << MAIN BANNER */
 
+/* BINGO TICKET >> */
 .bingo-ticket {
 	background: white;
 	margin-top: -35px;
@@ -201,7 +202,6 @@ p {
 }
 
 .DIV_Bingo04 {
-	margin-right: 10px;
 	float: right;
 	display: flex;
 	flex-direction: column;
@@ -322,14 +322,23 @@ p {
 	margin-right: 20px;
 }
 
+.DIV_BingoPlus_Center {
+	display: flex;
+	justify-content: center;
+}
+
+.DIV_Bingo_Center-table {
+	display: flex;
+	justify-content: center;
+}
+
 #checkboxes,
 #radiobuttons {
   width: 30%;
   height: 300px;
   float: left;
 }
-/* BASIC SWITCH STYLES (more control gained from modifiers)
-===================================================== */
+
 input[type='checkbox'],
 input[type='radio'] {
   display: none;
@@ -351,8 +360,7 @@ input[type='radio'] {
 	background: var(--brand-dark-gray);
 	z-index: 1;
 }
-/* BASIC LABEL STYLES (more control from modifiers)
-===================================================== */
+
 .checkbox::before, .radiobutton::before, .checkbox::after, .radiobutton::after {
 	display: block;
 	position: absolute;
@@ -374,8 +382,7 @@ input[type='radio'] {
   right: 1px;
   color: #fff;
 }
-/* SWITCH STATE (off)
-===================================================== */
+
 .checkbox label, .radiobutton label {
 	position: absolute;
 	display: block;
@@ -391,8 +398,7 @@ input[type='radio'] {
 	z-index: 3;
 	margin-bottom: 0;
 }
-/* SWITCH STATE (on)
-===================================================== */
+
 .checkbox input[type="checkbox"]:checked + label, 
 .radiobutton input[type="radio"]:checked + label {
 	background: #00CF4C;
@@ -412,8 +418,7 @@ input[type='radio'] {
 	background: var(--brand-light-blue-2);
 	border-color: var(--brand-light-blue-2);
 }
-/* STYLE: SLIDER (modified styles)
-===================================================== */
+
 .checkbox[data-style='slider'],
 .radiobutton[data-style='slider'] {
   height: 10px;
@@ -435,8 +440,7 @@ input[type='radio'] {
   -webkit-transform: translate3d(42px, 0, 0);
           transform: translate3d(42px, 0, 0);
 }
-/* STYLE: ROUNDED (modified styles)
-===================================================== */
+
 .checkbox[data-style='rounded'],
 .checkbox[data-style='rounded'] label,
 .radiobutton[data-style='rounded'],
@@ -444,16 +448,14 @@ input[type='radio'] {
   border-radius: 30px;
   margin-right: 20px;
 }
-/* STYLE: SQUARE (modified styles)
-===================================================== */
+
 .checkbox[data-style='square'],
 .checkbox[data-style='square'] label,
 .radiobutton[data-style='square'] label,
 .radiobutton[data-style='square'] {
   border-radius: 3px;
 }
-/* LABEL STYLE: on-off (modified styles)
-===================================================== */
+
 .checkbox[data-label='on-off']:before,
 .radiobutton[data-label='on-off']:before {
   content: 'on';
@@ -462,8 +464,7 @@ input[type='radio'] {
 .radiobutton[data-label='on-off']:after {
   content: 'off';
 }
-/* LABEL STYLE: yes-no (modified styles)
-===================================================== */
+
 .checkbox[data-label='yes-no']:before,
 .radiobutton[data-label='yes-no']:before {
   content: 'DA';
@@ -472,8 +473,7 @@ input[type='radio'] {
 .radiobutton[data-label='yes-no']:after {
   content: 'NE';
 }
-/* LABEL STYLE: none (modified styles)
-===================================================== */
+
 .checkbox[data-style='slider']:before,
 .checkbox[data-style='slider']:before,
 .checkbox[data-label='none']:before,
@@ -535,12 +535,13 @@ input[type='radio'] {
 	font-size: 18px;
 }
 
+.total-price {
+	margin-top: 15px;
+	font-size: 19px;
+}
+/* << BINGO TICKET */
 
-
-
-
-
-
+/* DRAW BANNER >> */
 .draw-banner .db-purple-bg {
 	background-color: var(--brand-purple);
 	color: #fff;
@@ -575,12 +576,9 @@ input[type='radio'] {
 	font-weight: 600;
 	font-size: 20px;
 }
+/* << DRAW BANNER */
 
-
-
-
-
-
+/* HOW TO PLAY >> */
 .how-to-play__headline {
 	margin-top: 120px;
 	margin-bottom: 80px;
@@ -651,11 +649,23 @@ input[type='radio'] {
 	line-height: 1;
 }
 
+.grid-item__header .grid-item-img01 {
+	max-height: 80px;
+}
+
+.grid-item__header .grid-item-img02 {
+	max-height: 96px;
+	transform: translate(8px, -5px);
+}
+
+.grid-item__header .grid-item-img03 {
+	max-height: 100px;
+}
+
 .grid-item__body {
 	background-color: var(--brand-white);
 	border-radius: 0 0 15px 15px;
 	padding: 50px 30px 30px;
-	min-height: 300px;
 }
 
 .grid-item__body h3 {
@@ -664,6 +674,19 @@ input[type='radio'] {
 	margin-bottom: 25px;
 }
 
+button.regulations {
+	text-transform: uppercase;
+	font-size: 18px;
+	padding: 12px;
+	line-height: 1;
+	border-radius: 4px;
+	font-weight: 700;
+	letter-spacing: 1px;
+	width: 240px;
+	margin-bottom: 100px;
+	margin-top: 60px;
+}
+/* << HOW TO PLAY */
 
 /* CLOVER >> */
 .clover {
@@ -689,7 +712,7 @@ input[type='radio'] {
 
 /* Large devices (desktops, less than 1200px) */
 @media (max-width: 1199.98px) {
-	/* #MAIN BANNER */
+	/* MAIN BANNER >> */
     .main-banner #countdown div:not(:last-child) {
 		margin-right: 14px;
 	}
@@ -706,8 +729,9 @@ input[type='radio'] {
 		font-size: 20px;
 		transform: translate(-7px, 8px);
 	}
-	/* end#MAIN BANNER */
+	/* << MAIN BANNER */
 
+	/* DRAW BANNER >> */
 	.draw-banner-srecko img {
 		left: 80px;
 	}
@@ -716,10 +740,16 @@ input[type='radio'] {
 		width: 170px;
 		margin-left: -10px;
 	}
+	/* << DRAW BANNER */
 }
 
 /* Medium devices (tablets, less than 992px) */
 @media (max-width: 991.98px) {
+	.float_left-bingo {
+		justify-content: center;
+	}
+
+	/* DRAW BANNER >> */
 	.draw-banner-srecko img {
 		position: relative;
 		width: 190px;
@@ -739,6 +769,7 @@ input[type='radio'] {
 		display: block;
 		margin: 0 auto 0;
 	}
+	/* << DRAW BANNER */
 }
 
 /* Small devices (landscape phones, less than 768px) */
@@ -755,9 +786,40 @@ input[type='radio'] {
 	}
 	/* << MAIN BANNER */
 
+	.bingo-ticket {
+		padding: 30px 15px;
+	}
+
+	.ticket_next-prev {
+		right: 7px;
+		top: 7px;
+	}
+
+	.Button_Small.outline_none i {
+		font-size: 46px;
+		top: 7px;
+	}
+
+	.Table01, .Table02, .Table03 {
+		margin-left: 30px;
+	}
+
+	.verticalTableText01a {
+		left: -72px;
+	}
+
 	/* CLOVER >> */
 	.clover h2 {
 		font-size: 32px;
 	}
 	/* << CLOVER */
+}
+
+/* Extra large devices */
+@media (min-width: 1200px) {
+	/* HOW TO PLAY >> */
+	.grid-item__body {
+		min-height: 300px;
+	}
+	/* << HOW TO PLAY */
 }
