--- a/css/style.css
+++ b/css/style.css
@@ -48,15 +48,21 @@ style.css
     color: var(--brand-dark-blue-1);
 }
 
+.color-white {
+    color: var(--brand-white) !important;
+}
+
 p {
     font-weight: 300;
+    font-size: 1.2rem;
 }
 
 p strong {
     font-weight: 700;
 }
 
-p.lg {
+p.lg,
+a.lg {
     font-size: 1.4rem;
 }
 
@@ -83,8 +89,9 @@ img {
     border-width: 2px;
 }
 
-.btn.lg {
+.btn.btn-lgg {
     font-size: 1.2rem;
+    padding: 0.75rem 2.25rem;
 }
 
 .btn.focus,
@@ -1218,6 +1225,16 @@ header .btn {
     top: 0;
 }
 
+.brzo-lako:after {
+    position: absolute;
+    content: "";
+    width: 200px;
+    height: 140px;
+    background: url(../images/crvene-tackice.svg) no-repeat left center / cover;
+    left: 84%;
+    top: 30%;
+}
+
 .brzo-lako__text {
     padding: 100px 60px 60px;
 }
@@ -1304,10 +1321,154 @@ header .btn {
 }
 
 
+/* CHARITY */
+.charity {
+    margin-top: 120px;
+}
+
+.charity > .container {
+    position: relative;
+}
+
+.charity > .container:after {
+    content: "";
+    position: absolute;
+    top: -50px;
+    left: -20px;
+    width: 90px;
+    height: 90px;
+    background: url(../images/zvezdica-tackice.svg) no-repeat;
+}
+
+.charity>.container:before {
+   content: "";
+   position: absolute;
+   top: -50px;
+   left: 94%;
+   width: 200px;
+   height: 140px;
+   background: url(../images/plave-tackice2.svg) no-repeat top left / 900px;
+   z-index: 1;
+}
+
+.charity-text {
+    background: var(--brand-red);
+    padding: 60px 100px;
+    color: var(--brand-white);
+    border-radius: 10px;
+    position: relative;
+}
+
+.charity-text::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 60%;
+    background: url(../images/isprekidano-srce.svg) no-repeat center / cover;
+    width: 170px;
+    height: 170px;
+    transform: translateY(90px);
+}
+
+.charity-media img {
+    max-width: 430px;
+    position: relative;
+    z-index: 1;
+    border-radius: 10px;
+    margin-top: 70px;
+}
+
+.charity-text__18 {
+    display: flex;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.charity-text__18-text {
+    font-weight: 800;
+    font-size: 1.2rem;
+    line-height: 1.1;
+}
+
+.eighteen {
+    font-weight: 800;
+    font-size: 1.2rem;
+    padding: 0.6em;
+    position: relative;
+    height: 50px;
+    width: 50px;
+    display: inline-block;
+    margin-right: .6em;
+}
+
+.eighteen::after {
+    position: absolute;
+    border: 3px solid currentColor;
+    border-radius: 50%;
+    content: "";
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
+
+
+/* GREB */
+.greb {
+    background-color: var(--brand-pink);
+    margin-top: 90px;
+    margin-bottom: 110px;
+}
+
+.greb__text {
+    padding: 50px 0 70px;
+}
+
+.greb__media img {
+    display: block;
+    margin: auto;
+}
+
+
+/* PRE FOOTER */
+.pre-footer {
+    margin-top: 110px;
+}
+
+.pre-footer-col {
+    background-color: var(--brand-dark-blue-2);
+    padding-top: 80px;
+    padding-bottom: 80px;
+    transition: background .1s ease;
+}
+
+.pre-footer-col:hover {
+    background-color: #4c8eff;
+}
+
+.pre-footer-col:hover svg circle {
+    fill: #fff;
+}
+
+.pre-footer-col:hover svg .cta-hov {
+    fill: var(--brand-dark-gray);
+}
+
+
 
 
 /* Large devices (desktops, less than 1200px) */
 @media (max-width: 1199.98px) {
+
+    .h1-lg {
+        font-size: 2.6rem;
+    }
+    
+    .charity-media img {
+        max-width: 370px;
+        display: block;
+        margin: 0 auto -120px;
+    }
     
 }
 
@@ -1319,7 +1480,8 @@ header .btn {
         padding: 0;
     }
 
-    .brzo-lako:before {
+    .brzo-lako:before,
+    .brzo-lako:after {
         content: none;
     }
 
@@ -1337,6 +1499,44 @@ header .btn {
 
     .winners--right-img .row {
         flex-direction: column-reverse;
+    }
+
+    .winners-media img {
+        width: 200px;
+    }
+
+    .charity>.container::before {
+        content: none;
+    }
+
+    .charity-text {
+        padding: 160px 15px 15px;
+    }
+
+    .charity-media img {
+        max-width: 80%;
+        display: block;
+        margin: 0 auto -120px;
+    }
+
+    .charity-text::after {
+        left: 75%;
+        width: 70px;
+        height: 70px;
+        transform: translateY(40px);
+    }
+
+    .greb {
+        text-align: center;
+    }
+
+    .img-xs {
+        width: 300px;
+        max-width: 100%;
+    }
+
+    .text-center-mob {
+        text-align: center;
     }
     
 }
@@ -1428,6 +1628,11 @@ header .btn {
         width: 38px;
         height: 38px;
         margin-right: 1.333%;
+    }
+
+    .pre-footer-col {
+        padding-top: 50px;
+        padding-bottom: 50px;
     }
     
 }
