--- a/css/style.css
+++ b/css/style.css
@@ -901,7 +901,7 @@ header .btn {
 .home-results {
     border-radius: 10px;
     box-shadow: 0 0 30px 0 rgba(0, 0, 0, .3);
-    z-index: 5;
+    z-index: 1;
     background: var(--brand-white);
     position: relative;
     margin-top: -80px;
@@ -934,6 +934,10 @@ header .btn {
 
 .home-results__btns {
     padding-left: 15px;
+}
+
+.home-results p {
+    font-size: 1rem;
 }
 
 .hero-balls__logo {
@@ -1323,7 +1327,7 @@ header .btn {
 
 /* CHARITY */
 .charity {
-    margin-top: 120px;
+    margin-top: 150px;
 }
 
 .charity > .container {
@@ -1440,6 +1444,7 @@ header .btn {
     padding-top: 80px;
     padding-bottom: 80px;
     transition: background .1s ease;
+    min-height: 100%;
 }
 
 .pre-footer-col:hover {
@@ -1452,6 +1457,64 @@ header .btn {
 
 .pre-footer-col:hover svg .cta-hov {
     fill: var(--brand-dark-gray);
+}
+
+.pre-footer-col > .row {
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.footer {
+    background-color: var(--brand-dark-gray);
+    padding: 70px 0;
+}
+
+.footer-social {
+    margin-left: auto;
+    justify-content: end;
+    display: flex;
+    align-items: center;
+}
+
+.footer-social__item i {
+    color: var(--brand-white);
+    font-size: 1.6rem;
+    padding: 0.4em;
+}
+
+.footer ul {
+    padding-left: 0;
+    margin-bottom: 0;
+    padding-top: 10px;
+}
+
+.footer ul li {
+    list-style: none;
+}
+
+.footer ul li a {
+    color: var(--brand-white);
+    font-weight: 300;
+    line-height: 1.5;
+    display: inline-block;
+    font-size: 0.9rem;
+    margin: 0.5em 0;
+}
+
+.footer ul li a:hover,
+.footer ul li a:focus {
+    color: var(--brand-light-blue-1);
+    text-decoration: none;
+}
+
+.footer ul li a strong,
+.footer ul li a.active {
+    font-weight: 700;
+}
+
+.after-footer {
+    padding: 20px 0;
+    background-color: var(--brand-light-gray);
 }
 
 
@@ -1530,6 +1593,10 @@ header .btn {
         text-align: center;
     }
 
+    .pre-footer-col>.row {
+        justify-content: start;
+    }
+
     .img-xs {
         width: 300px;
         max-width: 100%;
@@ -1546,7 +1613,11 @@ header .btn {
 
     .h1,
     h1 {
-        font-size: 2.4rem;
+        font-size: 2.2rem;
+    }
+
+    p {
+        font-size: 1rem;
     }
 
     .text-right-mob {
@@ -1558,8 +1629,16 @@ header .btn {
         background-color: var(--brand-white);
     }
 
+    .navbar-collapse .navbar-nav {
+        margin-bottom: 10px;
+    }
+
+    .navbar-collapse .btn + .btn {
+        margin-top: 10px;
+    }
+
     .hero-text {
-        padding: 15% 0 10%;
+        padding: 5% 0;
     }
 
     .hero-text__small {
@@ -1616,6 +1695,24 @@ header .btn {
     .games-item__text-big--bingo>span:first-child {
         font-size: 154px;
         margin-top: 16px;
+    }
+
+    .games-item {
+        padding: 9vw 6vw;
+    }
+
+    .games-btns {
+        justify-content: space-between !important;
+        padding: 0 15px;
+    }
+
+    .games-btns > p,
+    .games-btns > button {
+        margin: 0 !important;
+    }
+
+    .games-btns .slick-prev {
+        order: -1;
     }
 
 }
