--- a/css/style-1.css
+++ b/css/style-1.css
@@ -7,6 +7,181 @@ p {
     margin-bottom: .5rem;
 }
 
+/* checkbox & radiobuttons */
+#checkboxes,
+#radiobuttons {
+  width: 30%;
+  height: 300px;
+  float: left;
+}
+
+input[type='checkbox'],
+input[type='radio'] {
+  display: none;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  position: absolute;
+  height: 1px;
+  width: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+}
+
+.checkbox, 
+.radiobutton {
+	display: inline-block;
+	position: relative;
+	height: 26px;
+	line-height: 26px;
+	width: 54px;
+	background: var(--brand-dark-gray);
+	z-index: 1;
+}
+
+.checkbox::before, 
+.radiobutton::before, 
+.checkbox::after, 
+.radiobutton::after {
+	display: block;
+	position: absolute;
+	top: 0;
+	height: 100%;
+	width: 50%;
+	text-align: center;
+	text-transform: uppercase;
+	font-size: 12px;
+	z-index: 2;
+}
+.checkbox:before,
+.radiobutton:before {
+  left: 1px;
+  color: #fff;
+}
+
+.checkbox:after,
+.radiobutton:after {
+  right: 1px;
+  color: #fff;
+}
+
+.checkbox label, 
+.radiobutton label {
+	position: absolute;
+	display: block;
+	width: 20px;
+	height: 20px;
+	top: 3px;
+	left: 4px;
+	background: #fff;
+	border: 1px solid #fff;
+	cursor: pointer;
+	-webkit-transition: all 0.2s ease-in-out;
+	transition: all 0.2s ease-in-out;
+	z-index: 3;
+	margin-bottom: 0;
+}
+
+.checkbox input[type="checkbox"]:checked + label, 
+.radiobutton input[type="radio"]:checked + label {
+	background: #00CF4C;
+	border-color: #00cf4c;
+	-webkit-transform: translate3d(26px, 0, 0);
+	transform: translate3d(26px, 0, 0);
+}
+
+.checkbox[data-style='slider'],
+.radiobutton[data-style='slider'] {
+  height: 10px;
+  line-height: 10px;
+  border-radius: 10px;
+}
+
+.checkbox[data-style='slider'] label,
+.radiobutton[data-style='slider'] label {
+  width: 28px;
+  margin-top: -14px;
+  top: 50%;
+  left: 5px;
+  border-radius: 30px;
+}
+
+.checkbox[data-style='slider'] input[type='checkbox']:checked + label,
+.radiobutton[data-style='slider'] input[type='checkbox']:checked + label,
+.checkbox[data-style='slider'] input[type='radio']:checked + label,
+.radiobutton[data-style='slider'] input[type='radio']:checked + label {
+  -webkit-transform: translate3d(42px, 0, 0);
+          transform: translate3d(42px, 0, 0);
+}
+
+.checkbox[data-style='rounded'],
+.checkbox[data-style='rounded'] label,
+.radiobutton[data-style='rounded'],
+.radiobutton[data-style='rounded'] label {
+  border-radius: 30px;
+  margin-right: 20px;
+}
+
+.checkbox[data-style='square'],
+.checkbox[data-style='square'] label,
+.radiobutton[data-style='square'] label,
+.radiobutton[data-style='square'] {
+  border-radius: 3px;
+}
+
+.checkbox[data-label='on-off']:before,
+.radiobutton[data-label='on-off']:before {
+  content: 'on';
+}
+
+.checkbox[data-label='on-off']:after,
+.radiobutton[data-label='on-off']:after {
+  content: 'off';
+}
+
+
+.checkbox[data-label='yes-no']:before,
+.radiobutton[data-label='yes-no']:before {
+  content: 'DA';
+}
+
+.checkbox[data-label='yes-no']:after,
+.radiobutton[data-label='yes-no']:after {
+  content: 'NE';
+}
+
+.checkbox[data-style='slider']:before,
+.checkbox[data-style='slider']:before,
+.checkbox[data-label='none']:before,
+.checkbox[data-label='none']:before,
+.radiobutton[data-style='slider']:before,
+.radiobutton[data-style='slider']:before,
+.radiobutton[data-label='none']:before,
+.radiobutton[data-label='none']:before,
+.checkbox[data-style='slider']:after,
+.checkbox[data-style='slider']:after,
+.checkbox[data-label='none']:after,
+.checkbox[data-label='none']:after,
+.radiobutton[data-style='slider']:after,
+.radiobutton[data-style='slider']:after,
+.radiobutton[data-label='none']:after,
+.radiobutton[data-label='none']:after {
+  display: none;
+}
+
+#rb_bingo .checkbox input[type="checkbox"]:checked + label, 
+#rb_bingo .radiobutton input[type="radio"]:checked + label {
+	background: var(--brand-purple);
+	border-color: var(--brand-purple);
+}
+
+#rb_bingoPlus .checkbox input[type="checkbox"]:checked + label, 
+#rb_bingoPlus .radiobutton input[type="radio"]:checked + label {
+	background: var(--brand-light-blue-2);
+	border-color: var(--brand-light-blue-2);
+}
+/* checkbox & radiobuttons */
+
 /* MAIN BANNER >> */
 .main-banner {
     padding: 20px 0 50px;
@@ -332,167 +507,6 @@ p {
 	justify-content: center;
 }
 
-#checkboxes,
-#radiobuttons {
-  width: 30%;
-  height: 300px;
-  float: left;
-}
-
-input[type='checkbox'],
-input[type='radio'] {
-  display: none;
-  overflow: hidden;
-  clip: rect(0 0 0 0);
-  position: absolute;
-  height: 1px;
-  width: 1px;
-  margin: -1px;
-  padding: 0;
-  border: 0;
-}
-.checkbox, .radiobutton {
-	display: inline-block;
-	position: relative;
-	height: 26px;
-	line-height: 26px;
-	width: 54px;
-	background: var(--brand-dark-gray);
-	z-index: 1;
-}
-
-.checkbox::before, .radiobutton::before, .checkbox::after, .radiobutton::after {
-	display: block;
-	position: absolute;
-	top: 0;
-	height: 100%;
-	width: 50%;
-	text-align: center;
-	text-transform: uppercase;
-	font-size: 12px;
-	z-index: 2;
-}
-.checkbox:before,
-.radiobutton:before {
-  left: 1px;
-  color: #fff;
-}
-.checkbox:after,
-.radiobutton:after {
-  right: 1px;
-  color: #fff;
-}
-
-.checkbox label, .radiobutton label {
-	position: absolute;
-	display: block;
-	width: 20px;
-	height: 20px;
-	top: 3px;
-	left: 4px;
-	background: #fff;
-	border: 1px solid #fff;
-	cursor: pointer;
-	-webkit-transition: all 0.2s ease-in-out;
-	transition: all 0.2s ease-in-out;
-	z-index: 3;
-	margin-bottom: 0;
-}
-
-.checkbox input[type="checkbox"]:checked + label, 
-.radiobutton input[type="radio"]:checked + label {
-	background: #00CF4C;
-	border-color: #00cf4c;
-	-webkit-transform: translate3d(26px, 0, 0);
-	transform: translate3d(26px, 0, 0);
-}
-
-#rb_bingo .checkbox input[type="checkbox"]:checked + label, 
-#rb_bingo .radiobutton input[type="radio"]:checked + label {
-	background: var(--brand-purple);
-	border-color: var(--brand-purple);
-}
-
-#rb_bingoPlus .checkbox input[type="checkbox"]:checked + label, 
-#rb_bingoPlus .radiobutton input[type="radio"]:checked + label {
-	background: var(--brand-light-blue-2);
-	border-color: var(--brand-light-blue-2);
-}
-
-.checkbox[data-style='slider'],
-.radiobutton[data-style='slider'] {
-  height: 10px;
-  line-height: 10px;
-  border-radius: 10px;
-}
-.checkbox[data-style='slider'] label,
-.radiobutton[data-style='slider'] label {
-  width: 28px;
-  margin-top: -14px;
-  top: 50%;
-  left: 5px;
-  border-radius: 30px;
-}
-.checkbox[data-style='slider'] input[type='checkbox']:checked + label,
-.radiobutton[data-style='slider'] input[type='checkbox']:checked + label,
-.checkbox[data-style='slider'] input[type='radio']:checked + label,
-.radiobutton[data-style='slider'] input[type='radio']:checked + label {
-  -webkit-transform: translate3d(42px, 0, 0);
-          transform: translate3d(42px, 0, 0);
-}
-
-.checkbox[data-style='rounded'],
-.checkbox[data-style='rounded'] label,
-.radiobutton[data-style='rounded'],
-.radiobutton[data-style='rounded'] label {
-  border-radius: 30px;
-  margin-right: 20px;
-}
-
-.checkbox[data-style='square'],
-.checkbox[data-style='square'] label,
-.radiobutton[data-style='square'] label,
-.radiobutton[data-style='square'] {
-  border-radius: 3px;
-}
-
-.checkbox[data-label='on-off']:before,
-.radiobutton[data-label='on-off']:before {
-  content: 'on';
-}
-.checkbox[data-label='on-off']:after,
-.radiobutton[data-label='on-off']:after {
-  content: 'off';
-}
-
-.checkbox[data-label='yes-no']:before,
-.radiobutton[data-label='yes-no']:before {
-  content: 'DA';
-}
-.checkbox[data-label='yes-no']:after,
-.radiobutton[data-label='yes-no']:after {
-  content: 'NE';
-}
-
-.checkbox[data-style='slider']:before,
-.checkbox[data-style='slider']:before,
-.checkbox[data-label='none']:before,
-.checkbox[data-label='none']:before,
-.radiobutton[data-style='slider']:before,
-.radiobutton[data-style='slider']:before,
-.radiobutton[data-label='none']:before,
-.radiobutton[data-label='none']:before,
-.checkbox[data-style='slider']:after,
-.checkbox[data-style='slider']:after,
-.checkbox[data-label='none']:after,
-.checkbox[data-label='none']:after,
-.radiobutton[data-style='slider']:after,
-.radiobutton[data-style='slider']:after,
-.radiobutton[data-label='none']:after,
-.radiobutton[data-label='none']:after {
-  display: none;
-}
-
 .ticket_next-prev {
 	position: absolute;
 	right: 30px;
@@ -623,22 +637,22 @@ input[type='radio'] {
 	border-radius: 15px 15px 0 0;
 }
 
-.grid-item__header-purple {
+.grid-item__header--purple {
 	background-color: var(--brand-purple);
 	background: linear-gradient(-215deg, var(--brand-purple), var(--brand-purple) 57%, #822eb7 57%, #822eb7 100%);
 }
 
-.grid-item__header-orange {
+.grid-item__header--orange {
 	background-color: var(--brand-orange);
 	background: linear-gradient(-215deg, var(--brand-orange), var(--brand-orange) 57%, #e66200 57%, #e66200 100%);
 }
 
-.grid-item__header-blue {
+.grid-item__header--blue {
 	background-color: var(--brand-light-blue-2);
 	background: linear-gradient(-215deg, var(--brand-light-blue-2), var(--brand-light-blue-2) 57%, #0fb4c9 57%, #0fb4c9 100%);
 }
 
-.grid-item__header-green {
+.grid-item__header--green {
 	background-color: var(--brand-green);
 	background: linear-gradient(-215deg, var(--brand-green), var(--brand-green) 57%,#05b153 57%, #05b153 100%);
 }
@@ -745,9 +759,11 @@ button.regulations {
 
 /* Medium devices (tablets, less than 992px) */
 @media (max-width: 991.98px) {
+	/* BINGO TICKET >> */
 	.float_left-bingo {
 		justify-content: center;
 	}
+	/* << BINGO TICKET */
 
 	/* DRAW BANNER >> */
 	.draw-banner-srecko img {
@@ -786,6 +802,7 @@ button.regulations {
 	}
 	/* << MAIN BANNER */
 
+	/* BINGO TICKET >> */
 	.bingo-ticket {
 		padding: 30px 15px;
 	}
@@ -800,13 +817,16 @@ button.regulations {
 		top: 7px;
 	}
 
-	.Table01, .Table02, .Table03 {
+	.Table01, 
+	.Table02, 
+	.Table03 {
 		margin-left: 30px;
 	}
 
 	.verticalTableText01a {
 		left: -72px;
 	}
+	/* << BINGO TICKET */
 
 	/* CLOVER >> */
 	.clover h2 {
