--- a/css/style-1.css
+++ b/css/style-1.css
@@ -754,6 +754,11 @@ button.regulations {
 }
 
 
+
+.srecke {
+	margin-top: 80px;
+}
+
 .srecke-item {
 	padding: 15px;
 	box-shadow: 0 0 10px rgba(0,0,0,.3);
@@ -761,6 +766,7 @@ button.regulations {
 	margin: 20px;
 	position: relative;
 	overflow: hidden;
+	max-width: 210px;
 }
 
 .srecke-item__img {
@@ -778,6 +784,128 @@ button.regulations {
 .srecke-item__price,
 .srecke-item__max {
 	font-size: 15px;
+}
+
+.srecke-item__rules {
+	margin-top: 5px;
+}
+
+.srecke-item__rules a {
+	color: var(--brand-red);
+	text-decoration: none;
+	font-weight: 300;
+}
+
+.srecke-item__rules a i {
+	font-size: 12px;
+}
+
+.srecke-item__rules a:hover {
+	color: var(--brand-dark-gray);
+	transition: all ease-in 250ms;
+}
+
+.srecke-item__rules a:hover > i {
+	transform: translateX(7px);
+	transition: all ease-in 250ms;
+}
+
+.srecke-item__play {
+	margin-top: 15px;
+}
+
+.srecke-item__play button {
+	text-transform: uppercase;
+	width: 55%;
+	border-radius: 2px;
+	font-weight: 700;
+	font-size: 15px;
+	padding: 5px 0;
+}
+
+.srecke-item__play a.demo {
+	text-transform: uppercase;
+	font-size: 15px;
+	text-align: center;
+	display: inline-block;
+	width: 42%;
+	text-decoration: none;
+	color: var(--brand-dark-gray);
+}
+
+.srecke-item__play a.demo:hover {
+	color: var(--brand-red);
+	transition: all ease-in 250ms;
+}
+
+.srecke-btns button {
+	position: static;
+	padding: 0px;
+	width: 40px;
+	height: 40px;
+	margin-left: 8px;
+	transform: none;
+}
+
+.srecke-btns button::before {
+	color: var(--brand-dark-gray);
+}
+
+.srecke-btns .slick-prev::before {
+	font-family: var(--font-fa);
+	content: "\f137";
+	font-weight: 600;
+	opacity: 0.45;
+}
+
+.srecke-btns .slick-next::before {
+	font-family: var(--font-fa);
+	content: "\f138";
+	font-weight: 600;
+	opacity: 0.45;
+}
+
+
+.loto-banner {
+	background: linear-gradient(-215deg, var(--brand-red), var(--brand-red) 65%, #ba1521 65%, #ba1521 100%);
+	margin-top: 100px;
+	padding: 20px 0;
+}
+
+.loto-banner__logo {
+	width: 150px;
+	margin-bottom: 30px;
+}
+
+.loto-banner__text h2 {
+	font-size: 57px;
+	font-weight: 700;
+}
+
+.loto-banner__text button {
+	text-transform: uppercase;
+	font-weight: 700;
+	margin-top: 20px;
+	font-size: 18px;
+	padding: 6px 30px;
+	border-radius: 4px;
+}
+
+.charity.charity--srecke {
+	margin-top: 180px;
+	margin-bottom: 100px;
+}
+
+.charity-text.charity-text--srecke {
+	background: var(--brand-light-blue-2);
+}
+
+.charity--srecke > .container::before {
+	background: url(../images/crvene-tackice.svg) no-repeat top left;
+}
+
+.charity--srecke > .container::after {
+	background: url(../images/e-srecke/plavo-zuta-zvezdica.svg) no-repeat;
 }
 
 /* Large devices (desktops, less than 1200px) */
@@ -811,6 +939,15 @@ button.regulations {
 		margin-left: -10px;
 	}
 	/* << DRAW BANNER */
+
+	.loto-banner__logo {
+		width: 130px;
+		margin-bottom: 20px;
+	}
+
+	.loto-banner__text h2 {
+		font-size: 50px;
+	}
 }
 
 /* Medium devices (tablets, less than 992px) */
@@ -842,6 +979,19 @@ button.regulations {
 		margin: 0 auto 0;
 	}
 	/* << DRAW BANNER */
+
+	.loto-banner {
+		padding: 40px 0;
+	}
+
+	.loto-banner__text h2 {
+		font-size: 39px;
+	}
+
+	.loto-banner__logo {
+		width: 120px;
+		margin-bottom: 15px;
+	}
 }
 
 /* Small devices (landscape phones, less than 768px) */
@@ -857,6 +1007,29 @@ button.regulations {
 
 	.esgg-hero .es-text span {
 		font-size: 16px;
+	}
+
+	.loto-banner {
+		padding: 70px 0 60px;
+	}
+
+	.loto-banner__image {
+		display: flex;
+		justify-content: center;
+		margin-top: 40px;
+	}
+
+	.loto-banner__image img {
+		max-width: 200px;
+	}
+
+	.loto-banner__text {
+		text-align: center;
+	}
+
+	.loto-banner__logo {
+		width: 130px;
+		margin: 0 auto 30px;
 	}
 
 }
