--- a/css/style-1.css
+++ b/css/style-1.css
@@ -891,7 +891,8 @@ button.regulations {
 	border-radius: 4px;
 }
 
-.charity.charity--srecke {
+.charity.charity--srecke,
+.charity.charity--greb {
 	margin-top: 180px;
 	margin-bottom: 100px;
 }
@@ -906,6 +907,23 @@ button.regulations {
 
 .charity--srecke > .container::after {
 	background: url(../images/e-srecke/plavo-zuta-zvezdica.svg) no-repeat;
+}
+
+.esgg-hero--greb {
+	background-color: #ffc8e0;
+}
+
+.esgg-hero--greb .esgg-hero__bg {
+	background-image: url(../images/e-srecke/greb-man_bg.png);
+	background-repeat: no-repeat;
+	background-position-x: center;
+	background-position-y: center;
+	background-size: inherit;
+	padding: 260px 0 220px;
+}
+
+.esgg-hero .gg-text h1 {
+	font-weight: 700;
 }
 
 /* Large devices (desktops, less than 1200px) */
